--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,8 @@
 pipeline:
   docker:
     image: plugins/docker
-    environment:
-      - DOCKER_LAUNCH_DEBUG: true
+    debug: true
+    launch_debug: true
     repo: jamesvmcewan/defuser-club
     username: docker_username
     password: docker_password
