--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,9 @@ pipeline:
     image: appleboy/drone-ssh
     host: 206.189.26.21
     volumes:
-      - '/root/drone_rsa:/root/ssh/drone_rsa'
+      - ssh_volume
     key_path: /root/ssh/drone_rsa
+    secrets:
+      - ssh_volume
     script:
       - echo "test ssh"
