--- a/.drone.yml
+++ b/.drone.yml
@@ -2,10 +2,8 @@ pipeline:
   ssh:
     image: appleboy/drone-ssh
     host: 206.189.26.21
-    volumes:
-      - ssh_volume
-    key_path: /root/ssh/drone_rsa
     secrets:
-      - ssh_volume
+      - ssh_key
+      - ssh_username
     script:
       - echo "test ssh"
