--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,9 @@
 pipeline:
   ssh:
     image: appleboy/drone-ssh
+    host: 206.189.26.21
     script:
       - cd server && ./images.sh
     secrets:
       - ssh_key
       - ssh_username
-      - source: ssh_host
-        target: host
