trying ssh again

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ pipeline:
     image: appleboy/drone-ssh
     host: 206.189.26.21
     script:
-      - cd server && ./images.sh
+      - cd server;./images.sh
     secrets:
       - ssh_key
       - ssh_username
