--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,8 @@ pipeline:
     tags: latest
     secrets:
       - gcr_json_key
+    when:
+      branch: master
   ssh:
     image: appleboy/drone-ssh
     host: 206.189.26.21
